# my-second-identity

./: .env.example  .gitignore  pyproject.toml
configs/: rag.yaml
plans/: CLAUDE_REVIEW_REQUEST.md  IMAGE_STRUCTURE_GRAPHS.md  IMAGE_URL_MATCHES.md  PLAN.md  RAG_URL_KNOWLEDGE_BASE.md  _rag_notebooks.txt  notebooks.md
plans/agents/: result-agent-01.md  result-agent-02.md  result-agent-03.md  result-agent-04.md  result-agent-05.md  result-agent-06.md  result-agent-07.md  result-agent-08.md  urls-agent-01.txt  urls-agent-02.txt  urls-agent-03.txt  urls-agent-04.txt  urls-agent-05.txt  urls-agent-06.txt  urls-agent-07.txt  urls-agent-08.txt
plans/agents/prompts/: agent-01.txt  agent-02.txt  agent-03.txt  agent-04.txt  agent-05.txt  agent-06.txt  agent-07.txt  agent-08.txt
plans/agents/pseudocode/: agent-01.md  agent-01.prompt  agent-02.md  agent-02.prompt  agent-03.md  agent-03.prompt  agent-04.md  agent-04.prompt  agent-05.md  agent-05.prompt  agent-06.md  agent-06.prompt  agent-07.md  agent-07.prompt  agent-08.md  agent-08.prompt
plans/claude/: AGENT_INSTRUCTIONS.md  CLAUDE_REVIEW_REQUEST.md
plans/codex/: MASTER_SUMMARY.md  _rag_notebooks.txt  agent-05.md  agent-08.md
plans/codex/image-arch/: index.txt  targets.txt
plans/gemini/: IMAGE_STRUCTURE_GRAPHS.md  IMAGE_URL_MATCHES.md  PLAN.md
scripts/release/: validate_remote_release_gate.py
src/rag/: bootstrap.py  candidates.py  graph.py
tests/rag/: test_bootstrap_config.py  test_candidate_bundle.py  test_hyde_variant.py
tests/release/: test_validate_remote_release_gate.py
(+11 files in other folders)
