[project]
name = "my-second-identity"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-openai",
    "langchain-chroma",
    "python-dotenv",
    "pyyaml",
]

[project.optional-dependencies]
eval = [
    "ragas",
    "langsmith",
]
dev = [
    "pytest",
    "jupyter",
]
